--- a/resource/tsconfig.json
+++ b/resource/tsconfig.json
@@ -35,7 +35,7 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
-  ],
+, "src/api/LogApi.js"  ],
   "exclude": [
     "node_modules"
   ]
